--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,13 @@
 
 	<packaging>jar</packaging>
 
+	<parent>
+		<groupId>org.camunda</groupId>
+		<artifactId>camunda-release-parent</artifactId>
+		<version>2.5</version>
+		<relativePath />
+  </parent>
+  
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<camunda.version>7.5.0</camunda.version>
