--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,8 @@
 		<artifactId>camunda-release-parent</artifactId>
 		<version>2.5</version>
 		<relativePath />
-  </parent>
-  
+	</parent>
+
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<camunda.version>7.6.0</camunda.version>
@@ -28,6 +28,12 @@
 			<artifactId>camunda-engine</artifactId>
 			<version>${camunda.version}</version>
 			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.11</version>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 
