--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
 		<repository>
 			<id>camunda-bpm-nexus</id>
 			<name>camunda BPM Maven Repository</name>
-			<url>https://app.camunda.com/nexus/content/groups/public</url>
+			<url>https://artifacts.camunda.com/artifactory/public/</url>
 		</repository>
 	</repositories>
 
@@ -61,11 +61,11 @@
 	<distributionManagement>
 		<snapshotRepository>
 			<id>camunda-nexus</id>
-			<url>https://app.camunda.com/nexus/content/repositories/camunda-consulting-snapshots/</url>
+			<url>https://artifacts.camunda.com/artifactory/camunda-consulting-snapshots/</url>
 		</snapshotRepository>
 		<repository>
 			<id>camunda-nexus</id>
-			<url>https://app.camunda.com/nexus/content/repositories/camunda-consulting/</url>
+			<url>https://artifacts.camunda.com/artifactory/camunda-consulting/</url>
 		</repository>
 	</distributionManagement>
 </project>
